fix .card on mobile view

--- a/src/styles/TravelCard.css
+++ b/src/styles/TravelCard.css
@@ -64,6 +64,7 @@
     padding: 0;
   }
   .card {
+    max-height: 100%;
     flex-direction: column;
     padding: 3rem;
   }
